<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/photo1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/nat1"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/photo1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobbies_title"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobby1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobby2"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobby3"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"/>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="232dp"
        android:background="@android:color/holo_blue_light"
        android:src="@drawable/ic_thumb_up_black_24dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/like_counter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/init"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        android:background="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/fab1"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>